ändrat url igen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<title>OMDb template</title>
 </head>
 <body>
+	<h1>Marvel movies</h1>
+	<input type="text" id="input">
+	<button id="type">Choose type</button>
+	<!-- <button id="year">Choose release year</button> -->
 	<script src="js/main.js"></script>
 </body>
 </html>
