--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>Marvel movies</h1>
-	<input type="text" id="input">
+	<input type="text" id="input" placeholder="Search titel">
 	<button id="type">Choose type</button>
 	<!-- <button id="year">Choose release year</button> -->
 	<script src="js/main.js"></script>
