mycket konstig kod

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<title>OMDb template</title>
 </head>
 <body>
@@ -15,3 +15,31 @@
 	<script src="js/main.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+<!-- 
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+	<nav id="main-nav">
+		<a href="#" id="blog_posts">Blog posts</a>
+		<a href="#" id="about">About</a>
+		<a href="#" id="author">Author</a>
+	</nav>
+
+	<div id="content"></div>
+
+	<script src="js/main.js"></script>
+</body>
+</html> -->
