--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Comforter&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/css/style.css">
 	<title>OMDb template</title>
 </head>
-<body>
-	<h1>Marvel movies</h1>
-	<input type="text" id="input" placeholder="Search titel">
-	<button id="type">Choose type</button>
-	<!-- <button id="year">Choose release year</button> -->
+<body id="background">
+	<section id="logo">
+		<img src="img/marvel-bakgrund.jpg">
+	</section>
+
+	<section id="headline">
+		<h3>Search for your Marvel</h3>
+	</section>
+
+	<section id="section-movie">
+		<input type="text" id="input" placeholder="Search titel">
+		<button id="type">Choose type</button>
+		<!-- <button id="year">Choose release year</button> -->
+	</section>
 	<script src="js/main.js"></script>
 </body>
 </html>
