--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</section>
 
 	<section id="section-movie">
-		<input type="text" id="input" placeholder="Search titel">
+		<input type="text" id="input" value="hulk" placeholder="Search titel">
 		<button id="type">Choose type</button>
 		<!-- <button id="year">Choose release year</button> -->
 	</section>
@@ -32,24 +32,3 @@
 
 
 
-
-<!-- 
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-	<nav id="main-nav">
-		<a href="#" id="blog_posts">Blog posts</a>
-		<a href="#" id="about">About</a>
-		<a href="#" id="author">Author</a>
-	</nav>
-
-	<div id="content"></div>
-
-	<script src="js/main.js"></script>
-</body>
-</html> -->
