--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	</section>
 
 	<section id="headline">
-		<h3>Search for your Marvel</h3>
+		<h3>Search for your Marvel movie</h3>
 	</section>
 
 	<section id="section-movie">
 		<input type="text" id="input" value="hulk" placeholder="Search titel">
-		<button id="type">Choose type</button>
-		<!-- <button id="year">Choose release year</button> -->
+		<button id="type">Search movie</button>
+		
 	</section>
 	<script src="js/main.js"></script>
 </body>
