--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
 		<h3>Search for your Marvel movie</h3>
 	</section>
 
-	<section id="section-movie">
-		<input type="text" id="input" value="hulk" placeholder="Search titel">
-		<button id="type">Search movie</button>
+	<section id="input-section">
+		<input type="text" id="input" placeholder="Search titel">
 		
 	</section>
+	<section id="movie-section">
+
+	</section>
+	<a href=""></a>
 	<script src="js/main.js"></script>
 </body>
 </html>
