--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<section id="input-section">
 		<input type="text" id="input" placeholder="Search titel">
-		
+		<button>Search movie</button>
 	</section>
 	<section id="movie-section">
 
