--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 	<section id="input-section">
 		<input type="text" id="input" placeholder="Search titel">
-		<button>Search movie</button>
+		
+		  <button id="type">Search movie</button>
 	</section>
 	<section id="movie-section">
 
