--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>OMDb template</title>
 </head>
 <body id="background">
+	<main>
 	<section id="logo">
 		<img src="img/marvel-bakgrund.jpg">
 	</section>
@@ -18,14 +19,12 @@
 	</section>
 
 	<section id="input-section">
-		<input type="text" id="input" placeholder="Search titel">
-		
 		  <button id="type">Search movie</button>
 	</section>
 	<section id="movie-section">
 
 	</section>
-	<a href=""></a>
+	</main>
 	<script src="js/main.js"></script>
 </body>
 </html>
